# hackathon_aug2013

./: .gitignore  README.md  skynet.launch
ROS/rosbuild/position_server/: CMakeLists.txt  mainpage.dox  manifest.xml
ROS/rosbuild/position_server/config/: positions.yaml
ROS/rosbuild/position_server/include/position_server/: positionServer.h
ROS/rosbuild/position_server/launch/: position_server.launch
ROS/rosbuild/position_server/msg/: Position.msg
ROS/rosbuild/position_server/src/: positionServer.cpp
ROS/rosbuild/position_server/srv/: GetPosition.srv
ROS/rosbuild/pr2_props/: CMakeLists.txt  manifest.xml
ROS/rosbuild/pr2_props/.svn/: all-wcprops  entries
ROS/rosbuild/pr2_props/.svn/text-base/: CMakeLists.txt.svn-base  manifest.xml.svn-base
ROS/rosbuild/pr2_props/action/: HighFive.action
ROS/rosbuild/pr2_props/include/.svn/: all-wcprops  entries
ROS/rosbuild/pr2_props/include/pr2_props/.svn/: all-wcprops  entries
ROS/rosbuild/pr2_props/launch/: high_five.launch
ROS/rosbuild/pr2_props/launch/.svn/: all-wcprops  entries
ROS/rosbuild/pr2_props/scripts/.svn/: all-wcprops  entries
ROS/rosbuild/pr2_props/src/: .high_five.cpp.swp  hf_client.cpp  high_five.cpp
ROS/rosbuild/pr2_props/src/.svn/: all-wcprops  entries
ROS/rosbuild/pr2_props/srv/: DoHighfive.srv
ROS/rosbuild/retrieve_medicine/: CMakeLists.txt  manifest.xml
ROS/rosbuild/retrieve_medicine/action/: navigate.action
ROS/rosbuild/retrieve_medicine/include/retrieve_medicine/: retrieve_medicine.h  task_actions.h
ROS/rosbuild/retrieve_medicine/launch/: retrieve_medicine.launch
ROS/rosbuild/retrieve_medicine/map/: living_room.pgm  living_room.yaml
ROS/rosbuild/retrieve_medicine/msg/: navigateAction.msg  navigateActionFeedback.msg  navigateActionGoal.msg  navigateActionResult.msg  navigateFeedback.msg  navigateGoal.msg  navigateResult.msg
ROS/rosbuild/retrieve_medicine/src/: retrieve_medicine.cpp  rm_client.cpp  task_actions.cpp
ROS/rosbuild/retrieve_medicine/srv/: CallAction.srv
ROS/rosbuild/serve_drink/: CMakeLists.txt  mainpage.dox  manifest.xml
ROS/rosbuild/serve_drink/action/: Backup.action  PickupAll.action  TTS.action  navigate.action  savePose.action
ROS/rosbuild/serve_drink/include/serve_drink/: serve_drink.h  task_actions.h
ROS/rosbuild/serve_drink/launch/: serve_drink.launch
ROS/rosbuild/serve_drink/src/: sd_client.cpp  serve_drink.cpp  task_actions.cpp
ROS/rosbuild/serve_drink/src/serve_drink/msg/: _BackupAction.py  _BackupActionFeedback.py  _BackupActionGoal.py  _BackupActionResult.py  _BackupFeedback.py  _BackupGoal.py  _BackupResult.py  _PickupAllAction.py  _PickupAllActionFeedback.py  _PickupAllActionGoal.py  _PickupAllActionResult.py  _PickupAllFeedback.py  _PickupAllGoal.py  _PickupAllResult.py  _ReleaseAction.py  _ReleaseActionFeedback.py  _ReleaseActionGoal.py  _ReleaseActionResult.py  _ReleaseFeedback.py  _ReleaseGoal.py  _ReleaseResult.py  _ServeDrinkAction.py  _ServeDrinkActionFeedback.py  _ServeDrinkActionGoal.py  _ServeDrinkActionResult.py  _ServeDrinkFeedback.py  _ServeDrinkGoal.py  _ServeDrinkResult.py  __init__.py  _handoffAction.py  _handoffActionFeedback.py  _handoffActionGoal.py  _handoffActionResult.py  _handoffFeedback.py  _handoffGoal.py  _handoffResult.py  _navigateAction.py  _navigateActionFeedback.py  _navigateActionGoal.py  _navigateActionResult.py  (+3 more)
ROS/rosbuild/serve_drink/src/serve_drink/srv/: _CallAction.py  __init__.py
ROS/rosbuild/serve_drink/srv/: CallAction.srv
ROS/rosbuild/serve_drink_jun/: manifest.xml
ROS/rosbuild/serve_drink_jun/include/retrieve_medicine/: serve_drink.h  task_actions.h
ROS/rosbuild/serve_drink_jun/src/: retrieve_medicine.cpp  rm_client.cpp
ROS/rosbuild/serve_drink_jun/src/retrieve_medicine/msg/: _BackupAction.py  _BackupActionFeedback.py  _BackupActionGoal.py  _BackupActionResult.py  _BackupFeedback.py  _BackupGoal.py  _BackupResult.py  _PickupAllAction.py  _PickupAllActionFeedback.py  _PickupAllActionGoal.py  _PickupAllActionResult.py  _PickupAllFeedback.py  _PickupAllGoal.py  _PickupAllResult.py  _ReleaseAction.py  _ReleaseActionFeedback.py  _ReleaseActionGoal.py  _ReleaseActionResult.py  _ReleaseFeedback.py  _ReleaseGoal.py  _ReleaseResult.py  _RetrieveMedicineAction.py  _RetrieveMedicineActionFeedback.py  _RetrieveMedicineActionGoal.py  _RetrieveMedicineActionResult.py  __init__.py  (+17 more)
ROS/src/hackathon_scheduler/: CMakeLists.txt  package.xml
ROS/src/hackathon_scheduler/launch/: launch_it.launch
ROS/src/hackathon_scheduler/msg/: Event.msg  TaskStatus.msg
ROS/src/hackathon_scheduler/src/: scheduler.cpp
ROS/src/interactive_world/: CMakeLists.txt  package.xml
ROS/src/interactive_world/scripts/: interactive_world_server.py
ROS/src/interactive_world/src/: grasp_verification.cpp
ROS/src/interactive_world/src/interactive_world/: object_info.py
ROS/src/interactive_world_hackathon/: CMakeLists.txt  package.xml  setup.py
ROS/src/interactive_world_hackathon/action/: Load.action
ROS/src/interactive_world_hackathon/launch/: lunch_it.launch
ROS/src/interactive_world_hackathon/scripts/: fake_object_markers.py  interactive_world_hackathon_server.py
ROS/src/interactive_world_hackathon/src/: create_table.cpp  grasp_verification.cpp  tts.cpp
ROS/src/interactive_world_hackathon/src/interactive_world/: interactive_world_hackathon_server.py  interactive_world_server.py  template.py
ROS/src/interactive_world_hackathon/srv/: GraspCheck.srv  PrintTemplates.srv  SaveTemplate.srv
ROS/src/serve_drink_jun/: CMakeLists.txt  package.xml
ROS/src/serve_drink_jun/include/: retrieve_medicine.h
ROS/src/serve_drink_jun/map/: living_room.pgm
ROS/src/serve_drink_jun/src/: sd_client.cpp  task_actions.cpp
web/templatemakerjs/: AUTHORS.md  CHANGELOG.md  LICENSE  README.md
web/templatemakerjs/doc/: Maker.js.html  TEMPLATEMAKER.Maker.html  TamplateMaker.js.html  global.html  index.html
web/templatemakerjs/examples/: templatemaker.html
web/templatemakerjs/src/: TamplateMaker.js
web/templatemakerjs/src/display/: Maker.js
web/templatemakerjs/utils/: .jshintrc  Gruntfile.js  README.md  package.json
(+1 files in other folders)
