<?xml version="1.0"?>
<package>
  <name>interactive_world_hackathon</name>
  <version>0.0.1</version>
  <description>The interactive marker server for the interactive world.</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/interactive_world</url>
  <url type="bugtracker">https://github.com/SharedAutonomyToolkit/interactive_world/issues</url>
  <url type="repository">https://github.com/SharedAutonomyToolkit/interactive_world</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
</package>